--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ p {
   align-items: center;
   justify-content: space-around;
   padding: 0 5rem;
-  background-color: #fcfcfc;
+  background-color: #f9f9f9;
 }
 
 .section-about {
